[package]
name = "tracing-http-layer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_with = "2.0.0"
tokio = { version = "1.20.0", default-features = false, features = ["sync", "macros"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = "0.3.14"

[dev-dependencies.tracing-subscriber]
features = ["env-filter"]
