[package]
name = "tracing_http_layer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0"
tokio = { version = "1.20", default-features = false, features = ["sync", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"

[dev-dependencies.tracing-subscriber]
features = ["env-filter"]
