[package]
name = "tracing_http_layer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3"
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }
